# nexus-account-manager

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  README_EN.md  README_ZH.md  fix-all-imports.ps1  fix-imports-final.ps1  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
.kiro/steering/: project-rules.md
docs/: API_PLATFORMS_GUIDE.md  BUILD_AND_RELEASE.md  CLAUDE_SETUP.md  CROSS_PLATFORM_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_RULES.md  QUICK_REFERENCE.md  WINDOW_BEHAVIOR.md
scripts/: bump-version.ps1  bump-version.sh
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: antigravity.rs  claude.rs  codex.rs  gemini.rs  import.rs  kiro.rs  machine.rs  mod.rs  provider.rs
src-tauri/src/core/: kiro.rs  mod.rs  oauth.rs  oauth_server.rs  quota.rs  storage.rs
src-tauri/src/utils/: common.rs  config.rs  db_inject.rs  http.rs  logger.rs  mod.rs  paths.rs  process.rs
src/components/accounts/: AccountCard.tsx  (+5 more)
src/hooks/: usePlatformVersions.ts  useTheme.ts
src/i18n/: config.ts  index.ts
src/lib/: logger.ts  toast.ts  utils.ts
src/pages/: Accounts.tsx  Dashboard.tsx  MachineId.tsx  Settings.tsx
src/services/: MachineIdService.ts  ServiceFactory.ts  StorageService.ts
src/stores/: usePlatformStore.ts
src/types/: account.ts  platform.ts  provider.ts
test/: claude-test.json  codex-test.json  gemini-test.json
(+26 files in other folders)
