[package]
name = "nexus-account-manager"
version = "1.0.0"
description = "A unified multi-platform AI account management tool"
authors = ["adnaan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexus_account_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
once_cell = "1"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
tracing = "0.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
urlencoding = "2.1.3"
regex = "1"
sysinfo = "0.32"
sha1 = "0.10"
toml = "1.0.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
